--- a/test/cases/selectors.complex.styl
+++ b/test/cases/selectors.complex.styl
@@ -25,3 +25,12 @@ ul
 body
   form > input:nth-child(2)
     border 1px solid #eee
+
+.foo
+  bar baz
+
+  &-2x .bar
+    baz quux
+
+  &-3x.foo
+    baz qux
