Fix type() BIF to return 'list' for expression lists

--- a/test/cases/bifs.type.styl
+++ b/test/cases/bifs.type.styl
@@ -10,3 +10,5 @@ body
   background type(size)
   background type(type)
   background type(border-type)
+  background type({ a: 1, b: 2, c: 3 })
+  background type(1 2 3)
