Bug with parsing an attribute selector. Fixes #1360

--- a/test/cases/selectors.styl
+++ b/test/cases/selectors.styl
@@ -1,4 +1,3 @@
-
 @media print
   [contenteditable=true]
     border: none
@@ -90,4 +89,7 @@ input["bar"] ~ .foo
   color red
 
 input["bar"].foo:hover * .foo
+  color red
+
+input.foo[bar="baz"]
   color red
