--- a/test/cases/operator.range.css
+++ b/test/cases/operator.range.css
@@ -1,15 +1,19 @@
 body {
   foo: 1 2 3 4 5;
   foo: 1 2 3 4 5 6 7 8 9 10;
+  foo: 5 4 3 2 1 10 9 8 7 6;
   foo: 1;
   foo: 1 2 3 4 5;
+  foo: 5 4 3 2 1;
   foo: 5;
   foo: 2;
   foo: 5;
   foo: 6 7 8 9 10;
+  foo: 10 9 8 7 6;
   foo: true;
   foo: true;
 }
 body {
   foo: 1 2 3;
+  foo: 3 2 1;
 }
