Proper commented yet unneeded thingies

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,15 +45,15 @@
         <div id="ribbon"><a href="https://github.com/LearnBoost/stylus">Fork me on GitHub</a></div>
         <div id="content">
             <h1>{{ title }}</h1>
-            <!-- {{ toc }} -->
-            <!-- {{ partials_toc }} -->
+            {% comment %}<!-- {{ toc }} -->{% endcomment %}
+            {% comment %}<!-- {{ partials_toc }} -->{% endcomment %}
             {{ processed_content }}
-            <!-- {{ partials }} -->
+            {% comment %}<!-- {{ partials }} -->{% endcomment %}
 
         </div>
     </div>
 
-    <script src="{{ root_url }}j/script.js"></script>
+    {% comment %}<!-- <script src="{{ root_url }}j/script.js"></script> -->{% endcomment %}
     <!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter23802394 = new Ya.Metrika({id:23802394, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/23802394" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
 </body>
 </html>
