--- a/s/main.styl
+++ b/s/main.styl
@@ -52,7 +52,7 @@ h3
   font-weight bold
   font-size large
   &>a
-    background url("assets/stylus.png") no-repeat 39px
+    background url("../docs/graphics/Logos/stylus.png") no-repeat 39px
     width 299px
     height 206px
     display inline-block
