--- a/test/cases/selectors.styl
+++ b/test/cases/selectors.styl
@@ -54,6 +54,18 @@ ul > li:nth-child(2n)
 #aor
   foo bar
 
+#for .foo
+  foo bar
+
+.or .foo
+  foo bar
+
+.return  .foo
+  foo bar
+
+.null .foo
+  foo bar
+
 button[disabled]
 input[disabled]
   cursor default
