Fixed: Decimal part of units can be lost when coercing from a string

--- a/test/cases/operators.css
+++ b/test/cases/operators.css
@@ -38,3 +38,15 @@ body {
   foo: X::Micrsoft::crap(#0f0);
   foo: <foo, bar, baz>;
 }
+body {
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+}
