--- a/test/cases/regression.248.compressed.css
+++ b/test/cases/regression.248.compressed.css
@@ -1,4 +1,1 @@
-@-webkit-keyframes colors{0%{background-color:#f00}
-15%{background-color:#00f}
-100%{background-color:#000}
-}
+@-webkit-keyframes colors{0%{background-color:#f00}15%{background-color:#00f}100%{background-color:#000}}
