Interpolation with comma in selector should be treated as multiple selectors. Fixes #1401

--- a/test/cases/selector.interpolation.styl
+++ b/test/cases/selector.interpolation.styl
@@ -43,3 +43,8 @@ for selector in selectors
   {selector} *
     for prop in props
       {prop[0]}: prop[1]
+
+.foo
+  {'&.bar, &.baz'}
+    &.raz
+      padding: 0
