--- a/test/cases/function.arguments.styl
+++ b/test/cases/function.arguments.styl
@@ -12,3 +12,10 @@ test(a, b)
 body
   padding sum(1,2,3,4,5)
   padding test(1,2)
+
+foo(p0 = 4px, p1 = 5px)
+  p0 arguments[0]
+  p1 arguments[1]
+
+.foo
+  foo()
