Iterpolate ampersandless selectors in interpolations from root

--- a/test/cases/selector.interpolation.css
+++ b/test/cases/selector.interpolation.css
@@ -59,3 +59,11 @@ three * {
 .foo.baz.raz {
   padding: 0;
 }
+.foo_hack,
+x::-moz-focus-inner {
+  padding: 0;
+}
+.foo_hack2,
+x::-moz-focus-inner {
+  padding: 0;
+}
