--- a/test/cases/selectors.pseudo.styl
+++ b/test/cases/selectors.pseudo.styl
@@ -38,3 +38,48 @@ table
     color yellow
   td::first-letter
     color black
+
+label
+  input:indeterminate
+  span
+    color #001
+  input:checked
+  span
+    color #002
+  a:any-link
+  span
+    color #003
+  a:local-link
+  span
+    color #004
+  input:read-only
+  span
+    color #005
+  input:read-write
+  span
+    color #006
+  input:placeholder-shown
+  span
+    color #007
+  input:default
+  span
+    color #008
+  //  throws illegal unary "in", missing left-hand operand
+  // input:in-range
+  // span
+  //   color #009
+  input:out-of-range
+  span
+    color #010
+  input:required
+  span
+    color #011
+  input:optional
+  span
+    color #012
+  input:user-error
+  span
+    color #013
+  input:blank
+  span
+    color #014
