--- a/test/cases/operators.styl
+++ b/test/cases/operators.styl
@@ -93,4 +93,10 @@ body
   foo: '<a: %s b: %s>' % 1 2 // not what you might think
   foo: '<a: %s b: %s>' % (1 2)
   foo: 'X::Micrsoft::crap(%s)' % rgb(0,255,0)
-  foo: '<%s, %s, %s>' % (foo bar baz)  
+  foo: '<%s, %s, %s>' % (foo bar baz)
+
+str = ''
+
+body
+  str += 'bar'
+  foo: str
