Implemented built in function prefix-classes

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -290,3 +290,6 @@ add-property(name, expr)
     {name} expr
   else
     add-property-function(name, expr)
+
+prefix-classes(prefix)
+  -prefix-classes(prefix, block)
