--- a/test/cases/media.bubble.styl
+++ b/test/cases/media.bubble.styl
@@ -70,14 +70,14 @@ body
         more: stuff
 
 stuff()
-  @media and stuff
+  @media stuff
     stuff: 1234
 
 complex
   stuff()
   @media only awesome
     fizz: buzz
-  @media not so awesome
+  @media not awesome
     &
       one: 1
     .child
