--- a/test/cases/regression.475.styl
+++ b/test/cases/regression.475.styl
@@ -1,7 +1,7 @@
-only = webkit
+vendor = webkit
 
 body
-  foo: webkit in only
-  foo: (webkit in only)
+  foo: webkit in vendor
+  foo: (webkit in vendor)
   foo: true or false
-  foo: (webkit in only) or false
+  foo: (webkit in vendor) or false
