--- a/test/cases/regression.619.styl
+++ b/test/cases/regression.619.styl
@@ -1,3 +1,3 @@
-@media only screen and (-o-min-device-pixel-ratio: 3/2)
+@media only screen and (-o-min-device-pixel-ratio: 3\/2)
   body
     font-size 66%
