Temporally remove `default` from the pseudo-classes list. Fixes #1436

--- a/test/cases/selectors.pseudo.styl
+++ b/test/cases/selectors.pseudo.styl
@@ -61,9 +61,9 @@ label
   input:placeholder-shown
   span
     color #007
-  input:default
-  span
-    color #008
+  // input:default
+  // span
+  //   color #008
   //  throws illegal unary "in", missing left-hand operand
   // input:in-range
   // span
