--- a/test/cases/keyframes.styl
+++ b/test/cases/keyframes.styl
@@ -4,3 +4,20 @@
     color: black
   to
     color: white
+
+@keyframes foo {
+  from {
+    width: 100%
+  }
+  50% {
+  }
+  to {
+  }
+}
+
+@keyframes bar {
+  from {
+  }
+  to {
+  }
+}
