Test: parseColor - Adding test of single digit values in rgba strings

--- a/test/cases/bifs.json.styl
+++ b/test/cases/bifs.json.styl
@@ -18,6 +18,8 @@ json('import.json/vars.json')
     margin gutter * 2
     if awesome
       border red
+    //rgba with single digit values
+    text-decoration-color decoration-color
 
 //nested json variable
 @media queries-large
