--- a/test/cases/bifs.json.css
+++ b/test/cases/bifs.json.css
@@ -9,6 +9,7 @@
     outline: 0;
     margin: 20px;
     border: #f00;
+    text-decoration-color: rgba(0,0,0,0.5);
   }
 }
 @media screen and (min-width:1501px) {
