--- a/test/cases/bifs.math.styl
+++ b/test/cases/bifs.math.styl
@@ -2,10 +2,12 @@
   test1: ceil(0.5)
   test2: floor(0.5)
   test3: round(0.5)
+  test4: power(7,2)
 .math_units
   test1: ceil(0.5px)
   test2: floor(0.5px)
   test3: round(0.5px)
+  test4: power(7px,2)
 .math_precision0
   test1: ceil(0.47,0)
   test2: floor(0.47,0)
