Fixed parseColor for single digit integers in rgb(a) strings (now for real)

--- a/test/cases/bifs.json.styl
+++ b/test/cases/bifs.json.styl
@@ -20,6 +20,7 @@ json('import.json/vars.json')
       border red
     //rgba with single digit values
     text-decoration-color decoration-color
+    text-shadow 0 1px shadow-color
 
 //nested json variable
 @media queries-large
