--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -27,3 +27,9 @@ for column in 1 2 3
         foo column
         width size
         background-color hsl(column * 3, 50, 50)
+
+@media /* foo */all/* bar */ and   /*  baz */(/* bar */ min-width :/* quz */  100px  /* foo */ )/* quz */  ,
+/* bar */  only/* foo */  print  and/* foo   */  (width/* bar */ 100px)
+, /* comment */ (monochrome /* bar */)
+  body
+    color #0c0
