Fixed bug with literal as value of the variable in media query

--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -51,3 +51,9 @@ for column in 1 2 3
   if false
     .foo
       width: 20px
+
+condition = all
+
+@media condition and (width: 100px)
+  body
+    width: 10px
