Unknown at-rules support.

--- a/test/cases/if.postfix.styl
+++ b/test/cases/if.postfix.styl
@@ -54,6 +54,7 @@ body
 
 @import 'foo.css' if true
 @charset 'foo' if false
+@namespace svg "http://www.w3.org/2000/svg" if false
 
 num = 5 unless num is defined
 
