--- a/test/cases/moz-document-import.css
+++ b/test/cases/moz-document-import.css
@@ -3,3 +3,9 @@
     padding-right: 0px;
   }
 }
+@-moz-document url('http://www.w3.org/'), url-prefix('http://www.w3.org/Style/'), domain('mozilla.org'), regexp("https:.*") {
+  body {
+    color: #800080;
+    background: #ff0;
+  }
+}
