--- a/test/cases/page.styl
+++ b/test/cases/page.styl
@@ -2,6 +2,9 @@
 @page
   margin 2.5cm
 
+@page name
+  color: red
+
 @page :left
   margin-left 5cm
 
@@ -14,4 +17,13 @@
 
 @page :left {
   margin-left: 5cm;
+}
+
+@page :blank {
+  @top-center { content: none }
+}
+
+@page :right {
+  @top-center { content: 'foo' }
+  @bottom-center { content: counter(page) }
 }
