--- a/test/cases/page.css
+++ b/test/cases/page.css
@@ -1,6 +1,9 @@
 @page {
   margin: 2.5cm;
 }
+@page name {
+  color: #f00;
+}
 @page :left {
   margin-left: 5cm;
 }
@@ -13,4 +16,17 @@
 }
 @page :left {
   margin-left: 5cm;
+}
+@page :blank {
+  @top-center {
+    content: none;
+  }
+}
+@page :right {
+  @top-center {
+    content: 'foo';
+  }
+  @bottom-center {
+    content: counter(page);
+  }
 }
