Blockless properties inside at-rules support

--- a/test/cases/page.css
+++ b/test/cases/page.css
@@ -30,3 +30,12 @@
     content: counter(page);
   }
 }
+@page {
+  counter-reset: footnote;
+  @footnote {
+    counter-increment: footnote;
+    float: bottom;
+    column-span: all;
+    height: auto;
+  }
+}
