--- a/test/cases/keyframes.newlines.css
+++ b/test/cases/keyframes.newlines.css
@@ -2,8 +2,7 @@
   0%, 50%, 100% {
     background: #fff;
   }
-
-  100% {
+  to {
     background: #000;
   }
 }
@@ -11,8 +10,7 @@
   0%, 50%, 100% {
     background: #fff;
   }
-
-  100% {
+  to {
     background: #000;
   }
 }
@@ -20,8 +18,7 @@
   0%, 50%, 100% {
     background: #fff;
   }
-
-  100% {
+  to {
     background: #000;
   }
 }
@@ -29,8 +26,7 @@
   0%, 50%, 100% {
     background: #fff;
   }
-
-  100% {
+  to {
     background: #000;
   }
 }
@@ -38,8 +34,7 @@
   0%, 50%, 100% {
     background: #fff;
   }
-
-  100% {
+  to {
     background: #000;
   }
 }
