--- a/test/cases/keyframes.fabrication.defaults.css
+++ b/test/cases/keyframes.fabrication.defaults.css
@@ -1,45 +1,40 @@
 @-moz-keyframes foo {
-  0% {
+  from {
     color: #000;
   }
-
-  100% {
+  to {
     color: #fff;
   }
 }
 @-webkit-keyframes foo {
-  0% {
+  from {
     color: #000;
   }
-
-  100% {
+  to {
     color: #fff;
   }
 }
 @-o-keyframes foo {
-  0% {
+  from {
     color: #000;
   }
-
-  100% {
+  to {
     color: #fff;
   }
 }
 @-ms-keyframes foo {
-  0% {
+  from {
     color: #000;
   }
-
-  100% {
+  to {
     color: #fff;
   }
 }
 @keyframes foo {
-  0% {
+  from {
     color: #000;
   }
-
-  100% {
+  to {
     color: #fff;
   }
 }
