Added escaping for commas/parent reference in selectors

--- a/test/cases/selector.interpolation.css
+++ b/test/cases/selector.interpolation.css
@@ -67,3 +67,9 @@ x::-moz-focus-inner {
 x::-moz-focus-inner {
   padding: 0;
 }
+.bar_escaped_amp[title^=&] {
+  width: 10px;
+}
+.bar_escaped_comma[title^=,&z,] {
+  width: 10px;
+}
