--- a/test/cases/selector.interpolation.styl
+++ b/test/cases/selector.interpolation.styl
@@ -56,3 +56,10 @@ for selector in selectors
 .foo_hack2
   &{", /x::-moz-focus-inner"}
     padding: 0
+
+.foo
+  .bar_escaped_amp{'[title^=\&]'}
+    width: 10px
+
+  .bar_escaped_comma{'[title^=\,\&z\,]'}
+    width: 10px
