add more at-rules to the css converter

--- a/test/converter/atrules.styl
+++ b/test/converter/atrules.styl
@@ -18,3 +18,16 @@
     width: 400px
   100%
     width: 200px
+@namespace svg "http://www.w3.org/2000/svg"
+@host
+  body
+    color: #f00
+
+@supports (display: flex)
+  div
+    display: flex
+
+@font-face
+  font-family: "Bitstream Vera Serif Bold"
+  src: url("http://developer.mozilla.org/@api/deki/files/2934/=VeraSeBd.ttf")
+
