--- a/test/cases/keyframes.styl
+++ b/test/cases/keyframes.styl
@@ -38,3 +38,15 @@ foo()
 
 @keyframes foo
   foo() if true
+
+for i in 1..3
+  name = 'lol' + i
+  @keyframes name
+    for j in 1..10
+      {unit(j * 10, '%')}
+        left: j*10
+
+  @keyframes {'foo' + i}
+    for j in 1..5
+      {j * 5 + '%'}
+        left: j * 5
