Disable bubbling for `@keyframes`. Fixes #1489

--- a/test/cases/keyframes.css
+++ b/test/cases/keyframes.css
@@ -153,6 +153,14 @@
     left: 25;
   }
 }
+@keyframes foo {
+  0%, 50% {
+    color: #00f;
+  }
+  100% {
+    color: #008000;
+  }
+}
 @-moz-keyframes foo {
   from {
     width: 100%;
