--- a/test/cases/keyframes.styl
+++ b/test/cases/keyframes.styl
@@ -50,3 +50,10 @@ for i in 1..3
     for j in 1..5
       {j * 5 + '%'}
         left: j * 5
+
+.foo
+  @keyframes foo
+    0%, 50%
+      color: blue
+    100%
+      color: green
