Added `arguments` splat support. Fixes #803

--- a/test/cases/function.arguments.styl
+++ b/test/cases/function.arguments.styl
@@ -19,3 +19,15 @@ foo(p0 = 4px, p1 = 5px)
 
 .foo
   foo()
+
+color-proxy()
+  return rgba(arguments)
+
+.foo
+  color: color-proxy(0, 0, 0, 1)
+
+semi-transparent()
+  return rgba(arguments, 0.5)
+
+.bar
+  color: semi-transparent(0, 0, 0)
