Fixed bug with `*` selector first in the group. Closes #1161

--- a/test/cases/selectors.css
+++ b/test/cases/selectors.css
@@ -22,6 +22,11 @@ input[type="text"] {
 * .foo-bar {
   foo: bar;
 }
+*,
+*:before,
+*:after {
+  foo: bar;
+}
 body > #container * {
   foo: bar;
 }
