Fixed bug with complex selectors in conditionals. Closes #837 and #806

--- a/test/cases/if.selectors.styl
+++ b/test/cases/if.selectors.styl
@@ -20,3 +20,11 @@ if true
   if true
     body
       font 12px
+
+if true
+  caption[attr='foo'] + th:first-child
+    color red
+
+if true
+  div > div:first-child > :first-child
+    color blue
