--- a/test/cases/if.selectors.css
+++ b/test/cases/if.selectors.css
@@ -14,3 +14,9 @@ select {
 body {
   font: 12px;
 }
+caption[attr='foo'] + th:first-child {
+  color: #f00;
+}
+div > div:first-child > :first-child {
+  color: #00f;
+}
