Variable is undefined immediately after iterating over an empty list. Fixes #878

--- a/test/cases/for.complex.styl
+++ b/test/cases/for.complex.styl
@@ -26,3 +26,18 @@ fonts = helvetica, arial, sans-serif
 body
   for font in fonts
     foo font
+
+foo()
+  bar = 1
+
+  for x in arguments
+    null
+
+  baz bar is defined
+  baz bar is defined
+
+body
+  foo()
+
+body
+  foo(42)
