Bug with current-property and block mixins. Fixes #1355

--- a/test/cases/bifs.current-property.styl
+++ b/test/cases/bifs.current-property.styl
@@ -6,3 +6,17 @@ bar(args...)
 
 body
   bar foo()
+
+foo()
+  baz()
+
+bar()
+  +baz()
+    width: 10px
+
+baz()
+  test: current-property
+
+raz
+  foo: taz
+  bar: taz
