Prevent `block` mixin recursion. Fixes #1319

--- a/test/cases/functions.call.mixin.styl
+++ b/test/cases/functions.call.mixin.styl
@@ -102,3 +102,11 @@ foo(block = { height: 10px })
 
 .baz
   foo()
+
+foo()
+  {block}
+
+body
+  +foo()
+    color red
+    display block !important
