Fixed bug with `@media` bubbling and conditionals. Closes #1124

--- a/test/cases/media.css
+++ b/test/cases/media.css
@@ -36,3 +36,11 @@
     width: 100%;
   }
 }
+.quux {
+  font-weight: bold;
+}
+@media screen {
+  .quux {
+    background-position: 100px 0px;
+  }
+}
