--- a/test/cases/media.styl
+++ b/test/cases/media.styl
@@ -37,3 +37,11 @@
       width 100%
     }
   }
+
+.quux
+  font-weight bold
+  @media screen
+    if false
+      background-position 45px 0px
+    else
+      background-position 100px 0px
