Ignore newlines and comments in conditionals. Fixes #1008

--- a/test/cases/if.else.styl
+++ b/test/cases/if.else.styl
@@ -22,3 +22,13 @@ body
     color blue
   else
     color green
+
+body
+  if true
+    color red
+
+  // foo
+
+  // comment
+  else
+    color blue
