Fixed forgotten test

--- a/test/cases/media.complex.css
+++ b/test/cases/media.complex.css
@@ -44,6 +44,11 @@
     width: 10px;
   }
 }
+@media (min-width: 640px) {
+  body {
+    color: #f00;
+  }
+}
 @media only screen {
   body {
     width: 400px;
