Better handling of the `@css` and `unquote` inside groups. Fixes #840, #824, #1141, #1260, #158

--- a/test/cases/literal.css
+++ b/test/cases/literal.css
@@ -8,3 +8,14 @@ a { text-decoration: none; }
   border-radius: true;
   border-radius: true;
 }
+#login {
+  color: #f00;
+background: url("test.png");
+}
+#test,
+#logon {
+width: 100%
+}
+#logon {
+  color: #f00;
+}
