Prevent double-writing the `@media` and other at-rules. Fixes #1534

--- a/test/cases/atrules.css
+++ b/test/cases/atrules.css
@@ -54,3 +54,12 @@
 @foo bar5 {
   color: #f00;
 }
+.foo {
+  width: 1000px;
+}
+@font-face {
+  font-family: 'Arial-1';
+}
+@font-face {
+  font-family: 'Arial-2';
+}
