--- a/test/cases/atrules.styl
+++ b/test/cases/atrules.styl
@@ -49,3 +49,13 @@ foo(i)
 
 for i in 1..5
   foo(i)
+
+foo()
+  width: 1000px
+
+  for i in 1..2
+    @font-face
+      font-family: 'Arial-' + i
+
+.foo
+  foo()
