--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -98,3 +98,31 @@ a = 'desktop'
 @media breakpoints[a]['max']
   body
     color: blue
+
+@media (min-width: 400px)
+  @media (-webkit-min-device-pixel-ratio: 1.5)
+    .button
+      background: url(button@2x.png)
+
+@media (max-width: 500px)
+  .foo
+    color: #000
+
+  @media (min-width: 100px)
+    .foo
+      color: #100
+
+@media print
+  .foo
+    color: red
+
+  @media not print
+    .foo
+      color: blue
+
+body
+  @media print
+    color: red
+
+    @media (min-width: 500px), (max-width: 1000px)
+      width: 100%
