more complex test

--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -132,3 +132,8 @@ body
 
     @media (min-width: 500px), (max-width: 1000px)
       width: 100%
+
+@media screen
+  .sidebar, .header, .footer
+    @media (orientation: landscape)
+      width: 650px;
