--- a/test/cases/media.complex.css
+++ b/test/cases/media.complex.css
@@ -109,3 +109,10 @@
     width: 100%;
   }
 }
+@media screen and (orientation: landscape) {
+  .sidebar,
+  .header,
+  .footer {
+    width: 650px;
+  }
+}
