Added setters for rgb components

--- a/test/cases/bifs.components.css
+++ b/test/cases/bifs.components.css
@@ -7,3 +7,11 @@ body {
   background: 100%;
   background: 60%;
 }
+.setters {
+  background: #0c0;
+  background: #f00;
+  background: #fc0;
+  background: #3c0;
+  background: #f30;
+  background: #fc3;
+}
