--- a/test/cases/bifs.components.styl
+++ b/test/cases/bifs.components.styl
@@ -3,7 +3,15 @@ body
   background green(#fc0)
   background blue(#fc0)
   background alpha(#fff - rgba(0,0,0,.6))
-  
+
   background hue(hsl(15deg,100%,60%))
   background saturation(hsl(15deg,100%,60%))
   background lightness(hsl(15deg,100%,60%))
+
+.setters
+  background red(#fc0, 0)
+  background green(#fc0, 0)
+  background blue(#fc0, 0)
+  background red(#fc0, 20%)
+  background green(#fc0, 20%)
+  background blue(#fc0, 20%)
