Added setter for alpha color component

--- a/test/cases/bifs.components.styl
+++ b/test/cases/bifs.components.styl
@@ -12,6 +12,8 @@ body
   background red(#fc0, 0)
   background green(#fc0, 0)
   background blue(#fc0, 0)
+  background alpha(#fff, 0.5)
   background red(#fc0, 20%)
   background green(#fc0, 20%)
   background blue(#fc0, 20%)
+  background alpha(#fff, 50%)
