--- a/test/cases/bifs.components.css
+++ b/test/cases/bifs.components.css
@@ -11,7 +11,9 @@ body {
   background: #0c0;
   background: #f00;
   background: #fc0;
+  background: rgba(255,255,255,0.5);
   background: #3c0;
   background: #f30;
   background: #fc3;
+  background: rgba(255,255,255,0.5);
 }
