Added setters for hsl components

--- a/test/cases/bifs.components.css
+++ b/test/cases/bifs.components.css
@@ -16,4 +16,7 @@ body {
   background: #f30;
   background: #fc3;
   background: rgba(255,255,255,0.5);
+  background: #6c0;
+  background: #339;
+  background: #ccf;
 }
