--- a/test/cases/bifs.components.styl
+++ b/test/cases/bifs.components.styl
@@ -17,3 +17,7 @@ body
   background green(#fc0, 20%)
   background blue(#fc0, 20%)
   background alpha(#fff, 50%)
+
+  background: hue(#00c, 90deg)
+  background: saturation(#00c, 50%)
+  background: lightness(#00c, 90%)
