--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -188,10 +188,7 @@ mix(color1, color2, weight = 50%)
 
 invert(color = '')
   if color is a 'color'
-    r = 255 - red(color)
-    g = 255 - green(color)
-    b = 255 - blue(color)
-    rgba(r,g,b,alpha(color))
+    rgba(#fff - color, alpha(color))
   else
     unquote( "invert(" + color + ")" )
 
